--- a/Chat Rooms/Interfaces/Interfaces.csproj
+++ b/Chat Rooms/Interfaces/Interfaces.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.ServiceFabric.Services.Remoting" Version="7.1.2175" />
   </ItemGroup>
 
