feat: Add/remove Jwt info from the appsettings.json files

--- a/Chat Rooms/ChatRoomsWeb/appsettings.json
+++ b/Chat Rooms/ChatRoomsWeb/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "Jwt": {
+    "Key": "3xT9!vN@2zQ#5wL$8yR^1uM&7pK*4sJ3xT9!vN@2z$8yR^1uM&7pK*4sJ",
+    "Issuer": "ChatRooms",
+    "Audience": "ChatRooms",
+    "ExpiryMinutes": 30
+  },
+
   "AllowedHosts": "*"
 }
