--- a/Chat Rooms/ChatRoomsWeb/ChatRoomsWeb.csproj
+++ b/Chat Rooms/ChatRoomsWeb/ChatRoomsWeb.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.7" />
     <PackageReference Include="Microsoft.ServiceFabric.AspNetCore.Kestrel" Version="7.1.2175" />
     <PackageReference Include="Microsoft.ServiceFabric.Services.Remoting" Version="7.1.2175" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
