--- a/chat_rooms_client/package.json
+++ b/chat_rooms_client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fluentui/react": "^8.120.2",
+    "@fluentui/react-icons": "^2.0.252",
     "@microsoft/signalr": "^8.0.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
